--- a/TelegramBotBuildingCompany.csproj
+++ b/TelegramBotBuildingCompany.csproj
@@ -10,6 +10,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="MySql.Data" Version="9.3.0" />
       <PackageReference Include="Telegram.Bot" Version="22.5.0" />
     </ItemGroup>
 
